--- a/styles.css
+++ b/styles.css
@@ -10,19 +10,38 @@ body {
   max-width: 960px;
   margin: 0 auto;
 }
-h1 {
+#title {
   text-align: center;
   font-size: 400%;
+  margin-top: 20px;
 }
-#bpm-readout {
-  font-size: 400%;
+#metronome #readout-plus-minus {
+  display: flex;
+  font-size: 300%;
+  align-items: center;
+}
+#metronome #readout-plus-minus #minus-button,
+#metronome #readout-plus-minus #bpm-readout,
+#metronome #readout-plus-minus #plus-button {
+  width: 32%;
+  font-weight: bold;
+}
+#metronome #readout-plus-minus #minus-button {
+  text-align: right;
+}
+#metronome #readout-plus-minus #bpm-readout {
   display: flex;
   justify-content: center;
+  font-size: 200%;
+  margin: 20px 0;
 }
-#play-stop {
-  font-size: 400%;
+#metronome #play-stop-parent {
   display: flex;
-  justify-content: center;
+}
+#metronome #play-stop-parent #play-stop {
+  font-size: 500%;
+  margin-top: 20px;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .wrapper {
