--- a/styles.less
+++ b/styles.less
@@ -1,7 +1,7 @@
 //out:styles.css
-
-@color-1: pink;
-@color-2: #000;
+// pink
+@color-1: #8EAF9D;
+@color-2: #FFF + #8EAF9D;
 
 * {
   margin: 0;
@@ -22,6 +22,7 @@ body {
   text-align: center;
   font-size: 400%;
   margin-top: 20px;
+  color: @color-2;
 }
 
 #metronome {
@@ -32,6 +33,7 @@ body {
     #minus-button, #bpm-readout, #plus-button {
       width: 32%;
       font-weight: bold;
+      color: @color-2;
     }
     #minus-button {
       text-align:right;
@@ -50,6 +52,7 @@ body {
       font-size: 500%;
       margin-top: 20px;
       margin: 0 auto;
+      color: @color-2;
     }
   }
 
