--- a/styles.less
+++ b/styles.less
@@ -8,8 +8,12 @@
   font-family: monospace;
 }
 
+html {
+  height: 100%;
+}
 body {
-  background-color: @color-1;
+  height: 100%;
+  background: linear-gradient(@color-1, darken(@color-1, 25%));//@color-1;
 }
 
 .wrapper {
@@ -26,12 +30,16 @@ body {
 }
 
 #metronome {
+
+  // ===== READOUT / PLUS / MINUS
+
   #readout-plus-minus {
     display: flex;
     font-size: 300%;
     align-items: center;
+    justify-content: space-between;
     #minus-button, #bpm-readout, #plus-button {
-      width: 32%;
+      width: 30%;
       font-weight: bold;
       color: @color-2;
     }
@@ -46,6 +54,8 @@ body {
     }
   }
 
+  // ===== PLAY / STOP =====
+
   #play-stop-parent {
     display: flex;
     #play-stop {
@@ -53,6 +63,24 @@ body {
       margin-top: 20px;
       margin: 0 auto;
       color: @color-2;
+    }
+  }
+
+  // ===== BPM TABLE =====
+
+  #bpm-table {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    border: 2.5px solid white;
+    border-radius: 5px;
+    .bpm-table-cell {
+      border: 2.5px solid white;
+      flex: 1 1 24%;
+      font-size: 150%;
+      text-align: center;
+      color: @color-2;
+      padding: 5px 0;
     }
   }
 
