--- a/styles.less
+++ b/styles.less
@@ -24,9 +24,9 @@ body {
   margin: 0 auto;
 }
 
-#title-a {
-  text-decoration: none;
-  outline: none;
+//#title-a {
+  //text-decoration: none;
+  //outline: none;
   #title {
     text-align: center;
     font-size: 400%;
@@ -35,7 +35,7 @@ body {
     text-decoration: none;
     .mouseover;
   }
-}
+//}
 
 #metronome {
 
