--- a/styles.less
+++ b/styles.less
@@ -15,27 +15,22 @@ html {
 body {
   height: 90%;
   background: linear-gradient(darken(@color-1, 25%), @color-1);
-  //background: radial-gradient(darken(@color-1, 25%), @color-1);
 }
 
 .wrapper {
   width: 100%;
-  max-width: 500px;//960px;
+  max-width: 500px;
   margin: 0 auto;
 }
 
-//#title-a {
-  //text-decoration: none;
-  //outline: none;
-  #title {
-    text-align: center;
-    font-size: 400%;
-    margin-top: 40px;
-    color: @color-2;
-    text-decoration: none;
-    .mouseover;
-  }
-//}
+#title {
+  text-align: center;
+  font-size: 400%;
+  margin-top: 40px;
+  color: @color-2;
+  text-decoration: none;
+  .mouseover;
+}
 
 #metronome {
 
@@ -61,8 +56,16 @@ body {
     #bpm-readout {
       display: flex;
       justify-content: center;
-      font-size: 200%;
       margin: 20px 0;
+      input {
+        width: 100%;
+        font-size: 200%;
+        background: none;
+        border: none;
+        outline: none;
+        color: @color-2;
+        text-align: center;
+      }
     }
   }
 
