--- a/styles.less
+++ b/styles.less
@@ -57,6 +57,7 @@ body {
       display: flex;
       justify-content: center;
       margin: 20px 0;
+      min-width: 200px;
       input {
         width: 100%;
         font-size: 200%;
