--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,11 @@ html {
 }
 body {
   height: 90%;
-  background: linear-gradient(#4f6f5d, #8EAF9D);
+  background: linear-gradient(#354b3f, #000000);
+}
+::selection {
+  background-color: none;
+  color: #000;
 }
 .wrapper {
   width: 100%;
@@ -22,7 +26,7 @@ body {
   text-decoration: none;
 }
 #title:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 #metronome #readout-plus-minus {
   display: flex;
@@ -38,13 +42,13 @@ body {
   color: #FFF;
 }
 #metronome #readout-plus-minus #plus-button:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 #metronome #readout-plus-minus #minus-button {
   text-align: right;
 }
 #metronome #readout-plus-minus #minus-button:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 #metronome #readout-plus-minus #bpm-readout {
   display: flex;
@@ -71,7 +75,7 @@ body {
   color: #FFF;
 }
 #metronome #play-stop-parent #play-stop:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 #metronome #bpm-table {
   display: flex;
@@ -89,7 +93,7 @@ body {
   padding: 5px 0;
 }
 #metronome #bpm-table .bpm-table-cell:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 #metronome #volume-control-parent {
   width: 50%;
@@ -106,7 +110,7 @@ body {
   font-weight: bold;
 }
 .mouseover:hover {
-  color: #c7d7ce;
+  color: #b4cbbe;
 }
 @media screen and (min-width: 768px) {
   .wrapper {
