--- a/styles.less
+++ b/styles.less
@@ -7,6 +7,7 @@
 * {
   margin: 0;
   font-family: monospace;
+  box-sizing: border-box;
 }
 
 html {
@@ -14,6 +15,8 @@ html {
 }
 body {
   height: 90%;
+  display: flex;
+  align-items: center;
   background: linear-gradient(darken(@color-1, 25%), darken(@color-3, 100%));
 }
 
@@ -23,8 +26,6 @@ body {
 }
 
 .wrapper {
-  width: 100%;
-  max-width: 500px;
   margin: 0 auto;
 }
 
@@ -40,7 +41,6 @@ body {
 #metronome {
 
   // ===== READOUT / PLUS / MINUS
-
   #readout-plus-minus {
     display: flex;
     font-size: 300%;
@@ -62,7 +62,7 @@ body {
       display: flex;
       justify-content: center;
       margin: 20px 0;
-      min-width: 200px;
+      min-width: 5em;
       input {
         width: 100%;
         font-size: 200%;
@@ -71,6 +71,7 @@ body {
         outline: none;
         color: @color-2;
         text-align: center;
+        .mouseover;
       }
     }
   }
@@ -93,12 +94,13 @@ body {
   #bpm-table {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin: 20px auto 0 auto;
     border: 2.5px solid white;
     border-radius: 5px;
+    width: 50%;
     .bpm-table-cell {
       border: 2.5px solid white;
-      flex: 1 1 24%;
+      flex: 1 1 32%;
       font-size: 150%;
       text-align: center;
       color: @color-2;
@@ -110,7 +112,7 @@ body {
   // ===== VOLUME CONTROL =====
 
   #volume-control-parent {
-    width: 50%;
+    width: 25%;
     margin: 0 auto;
   }
 
@@ -137,9 +139,3 @@ body {
 }
 
 // ===== RESPONSIVE =====
-
-@media screen and (min-width: 768px) {
-  .wrapper {
-    width: 50%;//66.666%;
-  }
-}
