commented up javascript

--- a/styles.less
+++ b/styles.less
@@ -41,7 +41,8 @@ body {
   .mouseover;
 }
 
-// ===== READOUT / PLUS / MINUS
+// ===== READOUT / PLUS / MINUS =====
+
 #readout-plus-minus {
   display: flex;
   font-size: 300%;
@@ -131,6 +132,8 @@ body {
   color: @color-2;
   font-weight: bold;
 }
+
+// ===== KEYBINDS LEGEND =====
 
 #keybinds-h1 {
   text-align: center;
