--- a/styles.less
+++ b/styles.less
@@ -22,10 +22,10 @@ body {
 
 ::selection{ // Changes the colors of highlighted items
   background-color: none;
-  color: #000;
+  color: average(#000, @color-1);
 }
 
-.wrapper {
+#wrapper {
   margin: 0 auto;
   width: 50%;
   max-width: 450px;
@@ -202,10 +202,37 @@ body {
 
 }
 
-// ===== IF SCREEN IS LONG ENOUGH, CENTRE CONTENT =====
+// ===== IF SCREEN IS LONG ENOUGH, CENTRE CONTENT
 
 @media screen and (max-height: 700px) {
   body {
     align-items: stretch;
   }
+}
+
+// ===== ANIMATIONS =====
+
+#bpm-readout {
+  animation: animateFade 1.5s ease-in both;
+}
+
+#keybinds-legend-keys, #keybinds-legend {
+  animation: animateFade 1.5s 1.5s ease-in both;
+}
+
+@keyframes animateFade {
+  0%{ opacity: 0 }
+  100%{ opacity: 100% }
+}
+
+//=====
+
+#wrapper {
+  animation: descend 1.5s ease-out both;
+}
+
+@keyframes descend {
+  0%{ margin-top: -1750px }
+  75%{ margin-top: 25px }
+  100%{ margin-top: 0 }
 }
